# stylish-tts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: config.yml  model.yml
lib/: pyproject.toml
lib/stylish_lib/: config_loader.py
lib/stylish_lib/ttab/: homographs.py
sample_dataset/: training-list.txt  validation-list.txt
src/stylish_tts/: __init__.py
src/stylish_tts/lib/: config_loader.py
src/stylish_tts/lib/ttab/: phonemes.py  tokens.py
src/stylish_tts/train/: batch_manager.py  cli.py  cli_util.py  convert_to_onnx.py  dataloader.py  loss_log.py  losses.py  multi_spectrogram.py  optimizers.py  stage.py  stage_type.py  test_onnx.py  train.py  train_context.py  utils.py
src/stylish_tts/train/config/: model.yml
src/stylish_tts/train/dataprep/: align_text.py  pitch_extractor.py
src/stylish_tts/train/dataprep/rmvpe/: inference.py
src/stylish_tts/train/dataprep/ttab/: check-gt-phonemes.py  convert-files.py  make-micro.py  match-transcriptions.py  merge-transcriptions.py
src/stylish_tts/train/models/: ada_norm.py  common.py  discriminator.py  duration_predictor.py  export_model.py  generator.py  models.py  pitch_energy_predictor.py  speech_predictor.py  stft.py  text_encoder.py  text_style_encoder.py
src/stylish_tts/tts/ttab/: make-book.py  make-sentences.py  phonemize.py  prepare_book.py  speak-phonemes.py  speak-reference.py
stylish-tts/: batch_context.py  config_loader.py  loss_log.py  losses.py  meldataset.py  single_stages.py  stage_train.py  train.py
train/: pyproject.toml
train/stylish_train/: align_text.py  batch_context.py  batch_manager.py  cli.py  config_loader.py  convert_to_onnx.py  dataloader.py  loss_log.py  losses.py  meldataset.py  multi_spectrogram.py  optimizers.py  stage.py  stage_context.py  stage_train.py  stage_type.py  stage_validate.py  test_onnx.py  test_onnx_interactive.py  train.py  train_context.py  utils.py
train/stylish_train/config/: model.yml
train/stylish_train/dataprep/: align_text.py  pitch_extractor.py
train/stylish_train/dataprep/ttab/: find-phrases.py  make-segments.py  transcribe-phrases.py
train/stylish_train/models/: ada_norm.py  adawin.py  conformer.py  conv_next.py  decoder.py  duration_predictor.py  export_model.py  fine_style_encoder.py  generator.py  mel_style_encoder.py  model_pair.py  model_stack.py  models.py  pitch_energy_predictor.py  prosody_encoder.py  ringformer.py  rmvpe.py  speech_predictor.py  stft.py  style_transformer.py  text_aligner.py  text_encoder.py  text_feature_extractor.py  text_style_encoder.py
train/stylish_train/models/decoder/: conformer.py  harmonics.py  istftnet.py  mel_decoder.py  ringformer.py
tts/stylish_tts/ttab/: inference.py  make-sentence-text.py
