[project]
name = "stylish-tts"
version = "0.1.0"
license = "MIT"
description = "Stylish TTS is a training system and model architecture for high quality and fast single-speaker TTS models."
keywords = ["tts", "text to speech", "machine learning", "training"]
readme = "README.md"
authors = [
    { name = "Jonathon Duerig", email = "" }
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Environment :: GPU :: NVIDIA CUDA :: 12",
	"License :: OSI Approved :: MIT License",
	"Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
	"Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "munch>=4.0.0",
    "einops>=0.8.0",
    "einops-exts>=0.0.4",
    "transformers>=4.48.2",
    "matplotlib>=3.10.0",
    "librosa>=0.10.2.post1",
    "nnaudio>=0.3.3",
    "accelerate>=1.3.0",
    "pydantic>=2.10.6",
    "tensorboard>=2.18.0",
    "tqdm>=4.67.1",
    "onnx>=1.18.0",
    # "onnxruntime-gpu>=1.22.0",
    "onnxscript>=0.3.2",
    "nvidia-ml-py>=13.580.65",
    "pyworld>=0.3.5",
    "resampy>=0.4.3",
    "click>=8.1.8",
    "onnxruntime>=1.22.1",
]

[project.urls]
Repository = "https://github.com/Stylish-TTS/stylish-tts"

[project.scripts]
stylish-train = "stylish_tts:train_cli"

[project.optional-dependencies]
train = [
	
]
en = [
	
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    # "torch~=2.8",
    # "torchaudio~=2.8",
	# "k2>=1.24.4.dev20250807",
]

# [tool.uv.sources]
# k2 = { url = "https://huggingface.co/csukuangfj/k2/resolve/main/ubuntu-cuda/k2-1.24.4.dev20250807+cuda12.8.torch2.8.0-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl"}

# [[tool.uv.index]]
# url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/Triton-Nightly/pypi/simple/"
# url = "https://k2-fsa.github.io/k2/cuda.html"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
